2007-03-09  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.h (WORKING_DOT_WORD): Define.

2007-03-09  Alexandre Oliva  <aoliva@redhat.com>

	* app.c (do_scrub_chars): Turn #<line>"file"flags into .linefile.
	* as.h (new_logical_line_flags): New.
	* input-scrub.c (new_logical_line): Turned into wrapper for...
	(new_logical_line_flags): this.  Handle flags.
	* read.c (potable): Add linefile.  Adjust appline argument.
	(s_app_file): Fake .appfiles no more.
	(s_app_line): For .linefile, accept file name and flags.

2007-03-08  Alan Modra  <amodra@bigpond.net.au>

	* symbols.c (symbol_relc_make_sym): Comment typo fixes.

2007-03-08  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2007-03-07  Joseph Myers  <joseph@codesourcery.com>

	* configure.in (REPORT_BUGS_TEXI): Define to Texinfo version of
	bug-reporting URL.
	* doc/Makefile.am (gasver.texi): Define BUGURL.
	* doc/as.texinfo: Use BUGURL.
	* Makefile.in, configure, doc/Makefile.in: Regenerate.

2007-03-06  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/tc-s390.c (md_parse_option): z9-ec option added.

2007-03-02  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (relax_immediate): Always return positive values.
	(relaxed_symbol_addr): New function.
	(relax_adr, relax_branch): Use it.
	(arm_relax_frag): Pass strect argument.  Adjust infinite loop check.

2007-03-01  Joseph Myers  <joseph@codesourcery.com>

	* as.c (parse_args): Update copyright date.

2007-02-28  Nathan Sidwell  <nathan@codesourcery.com>

	* configure.tgt (sh-*-uclinux, sh[12]-*-uclinux): Specify as elf.

2007-02-28  Nick Clifton  <nickc@redhat.com>

	PR gas/3797
	* config/tc-d10v.c (do_assemble): Do not generate error messages,
	just return -1 whenever a problem is encountered.
	(md_assemble): If do_assemble returns -1 generate a non-fatal
	error message and return.

	PR gas/2623
	* config/tc-msp430.c (line_separator_char): Change to '{'.
